# code-context-provider

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build.yml
src/: .env.sample  main.py
src/backends/: __init__.py  content_fetcher.py  content_fetcher_factory.py  content_fetcher_protocol.py  search.py  search_factory.py  search_protocol.py
src/backends/sourcegraph/: __init__.py  client.py  fetcher.py
src/backends/zoekt/: __init__.py  client.py  fetcher.py
src/core/: __init__.py  limiters.py
src/evaluator/: agent.py  config.py  evaluate.py  judge.py
src/prompts/: prompts.yaml
src/servers/context/: agent.py  config.py  server.py
src/servers/search/: server.py
